--- a/packages/gatsby-theme-carbon/src/components/GlobalSearch/GlobalSearch.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/GlobalSearch/GlobalSearch.module.scss
@@ -57,7 +57,7 @@
 
 .list {
   position: absolute;
-  z-index: z('floating');
+  z-index: 10000; /* old z('floating') #938 */
   padding: $spacing-05 0;
   left: 0;
   right: 0;
