--- a/packages/gatsby-theme-carbon/src/components/PageTabs/PageTabs.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/PageTabs/PageTabs.module.scss
@@ -4,7 +4,7 @@
   background: $carbon--black-100;
   position: sticky;
   top: 3rem;
-  z-index: z('header');
+  z-index: 6000; /* old z('header') #938 */
 }
 
 .list {
